prevent user-select on safari

--- a/src/components/tile/Tile.module.scss
+++ b/src/components/tile/Tile.module.scss
@@ -2,6 +2,7 @@
   --unswept-border-width: 1px;
   -webkit-touch-callout: none;
   user-select: none;
+  -webkit-user-select: none;
   display: grid;
   place-items: center;
   font-size: 1.4rem;
